--- a/server/package.json
+++ b/server/package.json
@@ -43,6 +43,7 @@
     "@nestjs/schematics": "^7.3.0",
     "@nestjs/testing": "^7.6.15",
     "@types/bcrypt": "^3.0.1",
+    "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.12",
     "@types/jest": "^26.0.22",
     "@types/node": "^14.14.36",
