--- a/client/package.json
+++ b/client/package.json
@@ -5,9 +5,11 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.5",
-    "@testing-library/user-event": "^12.8.3"
+    "@testing-library/user-event": "^12.8.3",
+    "node-sass": "^6.0.0"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.3",
     "axios": "^0.21.1",
     "cookie-parser": "^1.4.5",
     "react": "^17.0.2",
